2016-11-01      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-gcc/m2linemap.h:  changed prototype of StartFile to
          use void * rather than char *.
	* gm2/m2.flex:  do not include p2c/p2c.h and m2linemap.h.

2016-10-20      Gaius Mulley <gaius@gnu.org>

	* gm2/examples/pge/MemStream.mod:  many changes and bug fixes to
	  shared library example.
	* gm2/examples/pge/MemStream.mod:  ditto.
	* gm2/examples/pge/NetworkOrder.mod:  ditto.
	* gm2/examples/pge/deviceIf.mod:  ditto.
	* gm2/examples/pge/examples/triangle.py:  ditto.
	* gm2/examples/pge/history.def:  ditto.
	* gm2/examples/pge/history.mod:  ditto.
	* gm2/examples/pge/pgeif.def:  ditto.
	* gm2/examples/pge/pgeif.mod:  ditto.
	* gm2/examples/pge/roots.def:  ditto.
	* gm2/examples/pge/roots.mod:  ditto.
	* gm2/examples/pge/twoDsim.def:  ditto.
	* gm2/examples/pge/twoDsim.mod:  ditto.
	* gm2/examples/pge/buffers.c:  ditto.
	* gm2/examples/pge/max2code.py:  fixed options.
	* gm2/examples/pge/mxmmaxima.py:  removed debugging trace.
	* gm2/examples/pge/mxmparser.py:  removed debugging trace.
	* gm2/examples/pge/mxmtree.py:  removed debugging trace.
	* gm2/examples/pge/pge.py:  huge number of changes.
	* gm2/examples/pge/pgeif.i:  changes to the python interface.
	* gm2/examples/pge/pgeplayback.py:  many bug fixes to allow
          single stepping.
	* gm2/examples/pge/pgepygame.py:  minor changes and removal
	  of spacing.

2016-10-03      Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  instruct mc to generate g++ compilient C code.
	* gm2/gm2-gcc/m2treelib.def:  remove multiple definition of
          get_set_field_rhs and import ADDRESS.
	* gm2/gm2.texi:  trimmed spaces.
	* gm2/m2.flex:  use __attribute__((unused)) in init/finish
	functions.
	* gm2/mc-boot:  rebuilt.
	* gm2/mc/decl.mod:  handle C char.  Strings of 1 character
          are encoded as C strings and also C chars.  (checkPtr)
          New procedure function.  (doExprCastC)  New procedure